# gauntlet

./: .gitignore  DESIGN.md  INTERIM_REPORT.md  KICKSTART_PROMPT_fable.md  README.md  REPORT.md  SPEC_framework.md  WORKLOG.md
evalkit/: conftest.py  pyproject.toml
evalkit/evalkit/: __init__.py  boundary.py  seeds.py
evalkit/evalkit/agents/: __init__.py  claude_code.py  mock.py  node.py  trace_meta.py
evalkit/evalkit/agents/prompts/: policy_dev.md
evalkit/evalkit/eval/: __init__.py  api.py  audit.py  baselines.py  cohort.py  criterion.py  external.py  probe.py  scoring.py
evalkit/examples/: real_e2e.py
evalkit/tests/: conftest.py  test_agents.py  test_audit.py  test_boundary.py  test_cohort.py  test_criterion.py  test_e2e_mock.py  test_external.py  test_scoring.py  test_seeds.py  test_trace_meta.py  test_v2_run.py
experiments/cohort-v2/: analyze_cohort.py  master_analysis.json  master_analysis.py  run_cohort_v2.py  run_makeup.py  run_makeup2_fable.py  run_makeup3_fable.py  run_makeup4_n3.py  run_makeup5_redo.py  run_makeup6_n4.py  run_makeup7_opus_n4.py  smoke_cohort.py
experiments/external-gpt/: gpt_ingest.json  ingest_gpt.py
experiments/roguelike-opus48/: MAPPING.md  PROMPT.base.md  PROMPT.scoring.md  REPORT_NOTES.md  analyze_trial.py  common.py  manual_policy_at_40_90k.json  manual_policy_at_40_90k.provenance.json  run_trial.py  salvage_provenance.py  smoke.py
experiments/scaffold-mono/: INVESTIGATION_WORKLOG.md  PROMPT.md  README.md  cog_vs_bare.json  cog_vs_bare.py  run_followup.py  run_test.py  (+1 more)
gym/: .gitignore  package-lock.json  package.json
(+290 files in other folders)
